--- a/ValueAbbreviator.vcxproj.filters
+++ b/ValueAbbreviator.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="ValueAbbreviator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Abbreviator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Abbreviator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EValueType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
