--- a/ValueAbbreviator.vcxproj
+++ b/ValueAbbreviator.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="Abbreviator.h" />
     <ClInclude Include="EValueType.h" />
+    <ClInclude Include="E_UI_Phases.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
